# team-finder-ad

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo_data.json  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy_workflow.yml
config/: __init__.py  base.py  django.py  logging.py  postgres.py  redis.py  settings.py  task.py
constants/: __init__.py  avatar.py  pagination.py  projects.py  services.py  users.py
core/: views.py
core/forms/: __init__.py  base.py
core/middlewares/: __init__.py  base.py  check_active.py  status_tracking.py  throttling.py
core/utils/: __init__.py  get_ip.py  should_skip.py
core/validators/: __init__.py  logic.py
docs/locale/: README.ru.md
docs/review/: REVIEW.md
nginx/: nginx.dev.conf  nginx.prod.conf
projects/: forms.py  models.py  selectors.py  services.py  urls.py
projects/admin/: __init__.py  actions.py  main.py
projects/migrations/: 0001_initial.py  0002_initial.py  0003_alter_project_description.py
projects/views/: __init__.py  cbv.py  endpoints.py  favorites.py  mixins.py
static/css/: admin_online.css  base.css  create-project.css  error.css  header.css  participants.css  profile.css  profile_edit.css  project_details.css  project_list.css
static/js/: avatar.js  favorites.js  projects.js  skills.js
team_finder/: settings.py  urls.py
templates_var1/: base.html
templates_var1/errors/: 403.html  404.html  429.html  500.html
templates_var1/includes/: avatar_preview.js  header.html  pagination.html  project-card.html
templates_var1/projects/: favorite_projects.html  project-details.html  project_list.html
templates_var1/users/: change_password.html  edit_profile.html  login.html  participants.html  user-details.html
tests/: conftest.py  test_settings.py
tests/factories/: __init__.py  project.py  user.py
tests/test_admin/: conftest.py  test_filters.py  test_project_admin.py  test_smoke.py  test_users_admin.py
tests/test_commands/: test_generate_avatars.py  test_get_service_links.py
tests/test_middlewares/: test_check_active.py  test_status_tracking.py  test_throttling.py
tests/test_models/: test_signals.py  test_user_model.py
tests/test_selectors/: test_project_selector.py  test_user_selector.py
tests/test_services/: test_anonymous_tracker.py  test_avatar_service.py  test_build_request_key.py  test_login_throttling.py  test_projects_services.py  test_throttling.py  test_throttling_endpoint.py  test_user_services.py  test_user_tracker.py
tests/test_unit/: test_get_ip.py  test_log_filters.py  test_redis_prefix.py  test_redis_safe.py  (+2 more)
users/: apps.py  selectors.py  services.py  types.py  urls.py
(+48 files in other folders)
